--- a/language/en-GB/en-GB.plg_system_jdom.ini
+++ b/language/en-GB/en-GB.plg_system_jdom.ini
@@ -21,14 +21,14 @@ PLG_JDOM_SUCCESSFULL_REMOVED="JDOM library successfull removed"
 PLG_JDOM_ERROR_CANNOT_CREATE_FOLDER="I cannot create the JDOM folder in the "media" root folder"
 
 
-JDOM_ALERT_ASK_BEFORE_TRASH="Are you sure to trash ?"
-JDOM_FILE_REMOVE="Remove"
-JDOM_FILE_REMOVE_DELETE="Delete all images and thumbs."
-JDOM_FILE_REMOVE_EJECT="Unlink and keep previous image file."
-JDOM_FILE_REMOVE_KEEP="Do not apply any changes."
-JDOM_FILE_REMOVE_THUMBS_ONLY="Unlink and delete thumbs. Keep image file"
-JDOM_FILE_REMOVE_TRASH="Trash image"
-JDOM_ORDERING_DISABLED="Ordering disabled. Please sort by ordering."
-JDOM_UNDEFINED="Undefined"
-JDOM_VALIDATOR_INCORRECT="Incorrect value."
-JDOM_VALIDATOR_REQUIRED="Required field."
+PLG_JDOM_ALERT_ASK_BEFORE_TRASH="Are you sure to trash ?"
+PLG_JDOM_FILE_REMOVE="Remove"
+PLG_JDOM_FILE_REMOVE_DELETE="Delete all images and thumbs."
+PLG_JDOM_FILE_REMOVE_EJECT="Unlink and keep previous image file."
+PLG_JDOM_FILE_REMOVE_KEEP="Do not apply any changes."
+PLG_JDOM_FILE_REMOVE_THUMBS_ONLY="Unlink and delete thumbs. Keep image file"
+PLG_JDOM_FILE_REMOVE_TRASH="Trash image"
+PLG_JDOM_ORDERING_DISABLED="Ordering disabled. Please sort by ordering."
+PLG_JDOM_UNDEFINED="Undefined"
+PLG_JDOM_VALIDATOR_INCORRECT="Incorrect value."
+PLG_JDOM_VALIDATOR_REQUIRED="Required field."
