fix: Lang file loading
- fixed language files not loading.
- added missing language string
- modified info file to be the same like other files

--- a/language/en-GB/en-GB.plg_system_jdom.ini
+++ b/language/en-GB/en-GB.plg_system_jdom.ini
@@ -1,9 +1,7 @@
 ; @package		plg_system_jDOM
-; @copyright		Copyright (C) 2013 Cook Self Service All rights reserved.
-; @email		support@j-cook.pro
-; @website		http://www.j-cook.pro
-; @license		MIT License; see LICENSE.txt
-
+; @copyright	Copyright (C) 2013 Cook Self Service. All rights reserved.
+; @author		J. HUARD (http://j-cook.pro) - G. Tomaselli (http://bygiro.com)
+; @license		MIT License (MIT)
 
 PLG_JDOM_DESCRIPTION="Simple plugin to register JDOM library by J-cook service http://j-cook.pro"
 PLG_SYSTEM_JDOM="System - Jdom library"
@@ -22,6 +20,7 @@ PLG_JDOM_ERROR_CANNOT_CREATE_FOLDER="I cannot create the JDOM folder in the "med
 
 
 PLG_JDOM_ALERT_ASK_BEFORE_TRASH="Are you sure to trash ?"
+PLG_JDOM_ALERT_ASK_BEFORE_REMOVE="Are you sure to delete ?"
 PLG_JDOM_FILE_REMOVE="Remove"
 PLG_JDOM_FILE_REMOVE_DELETE="Delete all images and thumbs."
 PLG_JDOM_FILE_REMOVE_EJECT="Unlink and keep previous image file."
