--- a/language/en-GB/en-GB.plg_system_jdom.sys.ini
+++ b/language/en-GB/en-GB.plg_system_jdom.sys.ini
@@ -1,8 +1,7 @@
 ; @package		plg_system_jDOM
-; @copyright		Copyright (C) 2013 Cook Self Service All rights reserved.
-; @email		support@j-cook.pro
-; @website		http://www.j-cook.pro
-; @license		MIT License; see LICENSE.txt
+; @copyright	Copyright (C) 2013 Cook Self Service. All rights reserved.
+; @author		J. HUARD (http://j-cook.pro) - G. Tomaselli (http://bygiro.com)
+; @license		MIT License (MIT)
 
 PLG_JDOM_DESCRIPTION="Simple plugin to register JDOM library by J-cook service http://j-cook.pro"
 PLG_SYSTEM_JDOM="System - Jdom library"
